--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type" : "module",
   "description": "",
   "dependencies": {
-    "express": "4.21.1"
+    "@libsql/client": "^0.14.0",
+    "dotenv": "^16.4.5",
+    "express": "4.21.1",
+    "socket.io": "4.8.1"
   }
 }
