--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type" : "module",
+  "type": "module",
   "description": "",
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "4.8.1"
   }
 }
